# gics-icb

./: .gitignore  LICENSE  README.md  Readme.md  setup.cfg  setup.py
icb/: map.py
icb/definitions/: __init__.py  icb_20210101.py
src/: convert.py  taxonomy.py
src/definitions/: __init__.py  icb_20210101.py
src/icb/: __init__.py  icb.py
src/icb/definitions/: __init__.py
src/icb/map/: gics2icb.py
src/mapping/: __init__.py  gics2icb.py  taxonomy.py
test/: TestConvert.py  TestExport.py  gics.text
