[metadata]
name = icb-batman32168
version = 0.1-alpha.1
author = Batman32168
author_email=batman32168@web.de
description = This library provides a way to parse, manipulate and analyze ICB codes.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/batman32168/py-icb
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src